# font-license-reader

./: .gitignore  CHECKLIST.md  CLAUDE.md  LICENSE  README.md  SUMMARY.md  VISION.md  check_fonts.sh  demo.sh  fontmeta.py  pyproject.toml  test_verification.py
.github/workflows/: test.yml
.idlergear/: config.toml
src/fontmeta/: __init__.py  cli.py  license_texts.py
tests/: __init__.py  test_cli.py  test_verification.py
