[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fontmeta"
version = "1.0.0"
description = "Font License Metadata Reader - Extract and verify licensing metadata from font files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Marc Jones", email = "marc@joneslaw.io"}
]
keywords = ["font", "license", "metadata", "ttf", "otf", "woff", "woff2", "osi", "compliance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Fonts",
]

dependencies = [
    "fonttools>=4.61.1",
    "brotli>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
fontmeta = "fontmeta.cli:main"

[project.urls]
Homepage = "https://github.com/marctjones/fontmeta"
Repository = "https://github.com/marctjones/fontmeta"
Issues = "https://github.com/marctjones/fontmeta/issues"

[tool.setuptools.packages.find]
where = ["src"]
